--- a/app/src/main/res/layout/ops_error_row_layout.xml
+++ b/app/src/main/res/layout/ops_error_row_layout.xml
@@ -15,6 +15,7 @@
         android:id="@+id/ops_error_row_materialCardView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:cardCornerRadius="0dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -28,10 +29,10 @@
                 convertIntToString="@{item.errorsCount}"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
                 android:layout_marginTop="32dp"
                 android:layout_marginBottom="32dp"
-                android:textSize="24sp"
+                android:textColor="@color/black"
+                android:textSize="18sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -45,7 +46,6 @@
                 android:layout_marginEnd="8dp"
                 android:text="@{item.source}"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                android:textColor="@color/black"
                 app:layout_constraintBottom_toBottomOf="@+id/ops_error_row_error_count_textView"
                 app:layout_constraintEnd_toStartOf="@+id/imageView"
                 app:layout_constraintStart_toEndOf="@+id/ops_error_row_error_count_textView"
