--- a/app/src/main/res/layout/fragment_ops_error.xml
+++ b/app/src/main/res/layout/fragment_ops_error.xml
@@ -15,6 +15,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:itemCount="3"
+        android:layout_marginStart="16dp"
         tools:listitem="@layout/ops_error_row_layout" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
