--- a/app/src/main/res/layout/ops_error_details_row_layout.xml
+++ b/app/src/main/res/layout/ops_error_details_row_layout.xml
@@ -13,6 +13,7 @@
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/ops_error_details_row_materialCardView"
+        app:cardCornerRadius="0dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
@@ -28,7 +29,6 @@
                 convertToFormatDateTime="@{item.date}"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="16dp"
                 android:textAppearance="@style/TextAppearance.AppCompat.Small"
