--- a/app/src/main/res/layout/fragment_ops_error_details.xml
+++ b/app/src/main/res/layout/fragment_ops_error_details.xml
@@ -18,4 +18,19 @@
         app:shimmer_recycler_item_count="3"
         app:shimmer_recycler_layout="@layout/placeholder_ops_error_details_row_layout" />
 
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/ops_error_details_try_again_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:layout_gravity="center"
+        android:text="@string/try_again"
+        android:visibility="gone"
+        app:icon="@drawable/ic_refresh"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:visibility="visible" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
