--- a/app/src/main/res/layout/ops_error_details_row_layout.xml
+++ b/app/src/main/res/layout/ops_error_details_row_layout.xml
@@ -11,51 +11,40 @@
             type="com.angelorobson.monitorerrorapp.models.OpsErrorDetailsModel" />
     </data>
 
-    <com.google.android.material.card.MaterialCardView
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/placeholder_ops_error_details_row_materialCardView"
-        app:cardCornerRadius="0dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_height="wrap_content">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+        <TextView
+            android:id="@+id/placeholder_ops_error_details_row_error_count_textView"
+            convertToFormatDateTime="@{item.date}"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            android:textAppearance="@style/TextAppearance.AppCompat.Small"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="2021-03-16 7pm" />
 
-            <TextView
-                android:id="@+id/placeholder_ops_error_details_row_error_count_textView"
-                convertToFormatDateTime="@{item.date}"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="16dp"
-                android:textAppearance="@style/TextAppearance.AppCompat.Small"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:text="2021-03-16 7pm" />
-
-            <TextView
-                android:id="@+id/placeholder_ops_error_details_row_source_textView"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:layout_marginBottom="16dp"
-                android:text="@{item.name}"
-                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                android:textColor="@color/black"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="@+id/placeholder_ops_error_details_row_error_count_textView"
-                app:layout_constraintStart_toStartOf="@+id/placeholder_ops_error_details_row_error_count_textView"
-                app:layout_constraintTop_toBottomOf="@+id/placeholder_ops_error_details_row_error_count_textView"
-                tools:text="MSTProc-FLEETPULS-SA" />
+        <TextView
+            android:id="@+id/placeholder_ops_error_details_row_source_textView"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="16dp"
+            android:text="@{item.name}"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            android:textColor="@color/black"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/placeholder_ops_error_details_row_error_count_textView"
+            app:layout_constraintStart_toStartOf="@+id/placeholder_ops_error_details_row_error_count_textView"
+            app:layout_constraintTop_toBottomOf="@+id/placeholder_ops_error_details_row_error_count_textView"
+            tools:text="MSTProc-FLEETPULS-SA" />
 
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-    </com.google.android.material.card.MaterialCardView>
-
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
