--- a/app/src/main/res/navigation/my_nav.xml
+++ b/app/src/main/res/navigation/my_nav.xml
@@ -13,6 +13,13 @@
         <action
             android:id="@+id/navigate_to_opsErrorDetailsFragment"
             app:destination="@id/opsErrorDetailsFragment" />
+        <action
+            android:id="@+id/action_opsErrorFragment_to_filterHourFragment"
+            app:destination="@id/filterHourFragment" />
+        <argument
+            android:name="hour"
+            app:argType="integer"
+            android:defaultValue="4" />
     </fragment>
     <fragment
         android:id="@+id/opsErrorDetailsFragment"
@@ -24,11 +31,26 @@
             app:argType="string" />
         <argument
             android:name="hours"
-            app:argType="integer" />
+            app:argType="integer"
+            android:defaultValue="4" />
 
         <argument
             android:name="title"
             app:argType="string" />
 
     </fragment>
+    <dialog
+        android:id="@+id/filterHourFragment"
+        android:name="com.angelorobson.monitorerrorapp.ui.fragments.filterhour.FilterHourFragment"
+        android:label="fragment_filter_hour"
+        tools:layout="@layout/fragment_filter_hour">
+        <action
+            android:id="@+id/filterHourFragment_to_opsErrorFragment"
+            app:destination="@id/opsErrorFragment"
+            app:popUpTo="@id/opsErrorFragment"
+            app:popUpToInclusive="true" />
+        <argument
+            android:name="hour"
+            app:argType="integer" />
+    </dialog>
 </navigation>
