--- a/app/src/main/res/layout/ops_error_row_layout.xml
+++ b/app/src/main/res/layout/ops_error_row_layout.xml
@@ -18,32 +18,17 @@
         android:layout_height="wrap_content">
 
         <TextView
-            android:id="@+id/placeholder_ops_error_row_error_count_textView"
-            convertIntToString="@{item.errorsCount}"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
-            android:layout_marginBottom="32dp"
-            android:textColor="@android:color/holo_red_dark"
-            android:textSize="18sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:text="17" />
-
-        <TextView
             android:id="@+id/placeholder_ops_error_row_source_textView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="8dp"
+            android:layout_marginTop="16dp"
             android:text="@{item.source}"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             android:textColor="@color/black"
-            app:layout_constraintBottom_toBottomOf="@+id/placeholder_ops_error_row_error_count_textView"
-            app:layout_constraintEnd_toStartOf="@+id/imageView"
-            app:layout_constraintStart_toEndOf="@+id/placeholder_ops_error_row_error_count_textView"
-            app:layout_constraintTop_toTopOf="@+id/placeholder_ops_error_row_error_count_textView"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toStartOf="@id/imageView"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             tools:text="MSTProc-FLEETPULS-SA" />
 
         <ImageView
@@ -51,10 +36,25 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
-            app:layout_constraintBottom_toBottomOf="@+id/placeholder_ops_error_row_error_count_textView"
+            app:layout_constraintBottom_toBottomOf="@id/placeholder_ops_error_row_error_count_textView"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/placeholder_ops_error_row_error_count_textView"
+            app:layout_constraintTop_toTopOf="@id/placeholder_ops_error_row_source_textView"
             app:srcCompat="@drawable/ic_arrow_forward" />
+
+        <TextView
+            android:id="@+id/placeholder_ops_error_row_error_count_textView"
+            totalExceptions="@{item.errorsCount}"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:layout_marginBottom="16dp"
+            android:textSize="18sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@id/placeholder_ops_error_row_source_textView"
+            app:layout_constraintStart_toStartOf="@id/placeholder_ops_error_row_source_textView"
+            app:layout_constraintTop_toBottomOf="@id/placeholder_ops_error_row_source_textView"
+            tools:text="17 exceptions" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
