change header color

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="mediumGray">#D1D1D1</color>
+    <color name="lightGray">#F2F2F2</color>
 
 </resources>
