--- a/app/src/main/res/layout/fragment_ops_error.xml
+++ b/app/src/main/res/layout/fragment_ops_error.xml
@@ -23,6 +23,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginBottom="16dp"
+            android:layout_marginEnd="8dp"
             android:textColor="@color/black"
             android:textSize="16sp"
             android:textStyle="bold"
