--- a/app/src/main/res/layout/fragment_ops_error.xml
+++ b/app/src/main/res/layout/fragment_ops_error.xml
@@ -37,6 +37,7 @@
         android:layout_height="0dp"
         android:layout_marginStart="16dp"
         android:clipToPadding="false"
+        tools:listitem="@layout/ops_error_row_layout"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
