--- a/app/src/main/res/layout/fragment_ops_error_details.xml
+++ b/app/src/main/res/layout/fragment_ops_error_details.xml
@@ -41,7 +41,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/ops_error_linearLayout"
         app:shimmer_recycler_item_count="3"
-        app:shimmer_recycler_layout="@layout/placeholder_ops_error_details_row_layout" />
+        app:shimmer_recycler_layout="@layout/placeholder_ops_error_details_row_layout"
+        tools:listitem="@layout/ops_error_details_row_layout" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/ops_error_details_try_again_button"
